Well-documented example

--- a/README
+++ b/README
@@ -6,10 +6,11 @@ License: BSD
 
 This project wants to be to Rake what Autocmd is to Make.
 
-Have a look at the self-explaining examples directory.
-
 The script mkrf_conf will build a file .configure that contains
 the whole configuration information. The Rakefile will read it in
 by extending itself. Various #defines will be given in autoconf
 style.
+
+Have a look at the self-explaining examples directory.
+A quick start gives you the files in "examples/plainc/".
 
